kubernetes/overlays/staging/replica-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
name: frontend

spec:
replicas: 2
-----------

apiVersion: apps/v1
kind: Deployment
metadata:
name: backend

spec:
replicas: 2
